--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="new-note-form" id="new-note-form" style="display: none;">
             <div class="close-form" onclick="closeForm()">X</div>
             <form id="note-form" method="post" onsubmit="submitForm(event)">
-                <input type="text" name="noteTitle" id="noteTitle" placeholder="Note Title" class="form-field"/>
+                <input type="text" name="noteTitle" id="noteTitle" placeholder="Note Title*" class="form-field"/>
                 <label class="folder-name-label">Folder Name</label>
                 <input type="text" name="folderName" id="folderName" placeholder="Folder Name" class="form-field" value="General"/>
                 <textarea type="text" name="noteDesc" id="noteDesc" placeholder="Description" rows="5" cols="30" class="form-field"></textarea>
